# noname_tools

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  makefile  noname_tools.sln
.github/workflows/: build_and_test.yml
src/noname_tools/: algorithm_tools.h  file_tools.h  functional_tools.h  general_defs.h  general_undefs.h  optional_tools.h  range_tools.h  rtctmap_tools.h  string_tools.h  taggedvalue_tools.h  tools  tuple_tools.h  typelist_tools.h  typetraits_tools.h  utility_tools.h  variant_tools.h  vector_tools.h
test_tool/: LICENSE.txt  main.cpp  makecl.bat  makefile  test_aglorithm.cpp  test_functional.cpp  test_optional.cpp  test_range.cpp  test_rtctmap.cpp  test_taggedvalue.cpp  test_tool.vcxproj  test_tool.vcxproj.filters  test_tuple.cpp  test_typelist.cpp  test_typetraits.cpp  test_utilities.cpp  test_variant.cpp  test_vector.cpp  testcases.cpp
